--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>matsk</groupId>
     <artifactId>mszdqabbs</artifactId>
-    <version>1.0.0</version>
+    <version>1.2.0</version>
     <name>mszdqabbs</name>
     <description>A question and answer bbs for coders.</description>
 
@@ -62,6 +62,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
